force-app/main/default/objects/Meta_Ad_Set__c/Meta_Ad_Set__c.object-meta.xml
<CustomObject>
    <description>Meta advertising ad set synchronized by QuickBridge for attribution and reporting.</description>
    <label>Meta Ad Set</label>
    <nameField>
        <label>Meta Ad Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meta Ad Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>