force-app/main/default/objects/Meta_Ad_Set__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Meta Ad Sets</relationshipLabel>
    <relationshipName>Meta_Ad_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>