force-app/main/default/objects/Meta_Ad_Set__c/fields/Daily_Budget__c.field-meta.xml
<CustomField>
    <fullName>Daily_Budget__c</fullName>
    <label>Daily Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>