force-app/main/default/objects/Meta_Ad_Set__c/fields/Meta_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Meta_Campaign_Id__c</fullName>
    <label>Meta Campaign Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>