force-app/main/default/objects/Meta_Ad_Set__c/fields/Optimization_Goal__c.field-meta.xml
<CustomField>
    <fullName>Optimization_Goal__c</fullName>
    <label>Optimization Goal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>